fixed alignment issues

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -13,12 +13,16 @@ body {
   padding: 40px 20px;
 }
 
-header nav {
+header span {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 70%;
   margin: auto;
+}
+
+.theme:hover {
+    cursor: pointer;
 }
 
 main {
@@ -27,17 +31,12 @@ main {
   align-items: center;
   text-align: center;
   gap: 20px;
-  margin-top: 60px;
   width: 70%;
   margin: 60px auto 0;
 }
 
 main h1 {
   font-size: 4em;
-}
-
-.title-one {
-  display: none;
 }
 
 .textarea-box {
@@ -78,6 +77,7 @@ textarea::placeholder {
   justify-content: space-between;
   width: 100%;
   gap: 20px;
+    margin-bottom: 40px;
 }
 
 .checkbox {
@@ -151,7 +151,19 @@ input[type="checkbox"] {
   cursor: pointer;
   width: 20px;
   height: 20px;
-  accent-color: #d3a0fa;
+    appearance: none;
+    border: 1px solid #ccc;
+    accent-color: #d3a0fa;
+}
+
+
+input[type="checkbox"]:checked {
+    background-color: #d3a0fa;
+}
+
+
+.space, .Limit{
+    border-radius: 10px;
 }
 
 .word-wrapper {
@@ -223,7 +235,7 @@ input[type="checkbox"] {
 
 /* Mobile View */
 @media (max-width: 480px) {
-  header nav {
+  header span {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -238,13 +250,10 @@ input[type="checkbox"] {
     width: 90%;
   }
 
-  .title-one {
-    display: block;
+  .title{
+      width: 90%;
   }
 
-  .title-two {
-    display: none;
-  }
   .wrapper-checkbox {
     flex-direction: column;
   }
@@ -271,13 +280,13 @@ input[type="checkbox"] {
   }
 
   .progress-bar {
-    width: 60%;
+    width: 10%;
   }
 }
 
 /* Tablet view */
 @media (max-width: 768px) {
-  header nav {
+  header span{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -288,12 +297,10 @@ input[type="checkbox"] {
     width: 100%;
   }
 
-  .title-one {
-    display: none;
-  }
-
+.title{
+    width: 70%;
+}
   .wrapper-cards {
-    flex-direction: row;
     flex-wrap: nowrap;
     width: 100%;
   }
@@ -313,6 +320,10 @@ input[type="checkbox"] {
     font-size: 4em;
   }
 
+    .title{
+        width: 80%;
+    }
+
   .progress-bar {
     width: 80%;
   }
@@ -331,4 +342,10 @@ input[type="checkbox"] {
   .word-wrapper {
     width: 100%;
   }
+}
+
+@media (min-width: 1440px) {
+    .title{
+        width: 55%;
+    }
 }
